@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_vector.h,v 1.8 2008-03-24 08:58:31 guru Exp $
+ *	$Id: gmt_vector.h,v 1.9 2008-09-24 23:44:37 guru Exp $
  *
  *	Copyright (c) 1991-2008 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -24,6 +24,7 @@ EXTERN_MSC double GMT_mag3v (double *a);
 EXTERN_MSC int GMT_chol_dcmp (double *a, double *d, double *cond, GMT_LONG nr, GMT_LONG n);
 EXTERN_MSC GMT_LONG GMT_fix_up_path (double **a_lon, double **a_lat, GMT_LONG n, double step, int mode);
 EXTERN_MSC int GMT_jacobi (double *a, GMT_LONG *n, GMT_LONG *m, double *d, double *v, double *b, double *z, int *nrots);
+EXTERN_MSC void GMT_gauss (double *a, double *vec, int n, int nstore, double test, int *ierror, int itriag);
 EXTERN_MSC void GMT_cart_to_geo (double *alat, double *alon, double *a, int rads);
 EXTERN_MSC void GMT_chol_recover (double *a, double *d, GMT_LONG nr, GMT_LONG n, int nerr, int donly);
 EXTERN_MSC void GMT_chol_solv (double *a, double *x, double *y, GMT_LONG nr, GMT_LONG n);
